# UpTrader

./: README.md  db.sqlite3  fill_menu_db.py  pyproject.toml
UpTrader/: settings.py  urls.py
menu_app/: admin.py  models.py  urls.py  views.py
menu_app/migrations/: 0001_initial.py  0002_menu.py  0003_menuitem_menu.py
menu_app/templatetags/: menu_tags.py
templates/menu_app/: main.html
