[tool.poetry]
name = "uptrader"
version = "0.1.0"
description = ""
authors = ["Aleksey Melnikov <mas-chel@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
